# DEV_racing_chess

./: .gitignore  CMakeLists.txt  README.md  ai_player.cpp  ai_player.h  board.cpp  board.h  chess_api.cpp  chess_api.h  chess_types.h  fen_parser.cpp  fen_parser.h  game.cpp  game.h  game_ui.cpp  game_ui.h  main.cpp  move_validator.cpp  move_validator.h  timer.cpp  timer.h
bot/: ai_player.h
core/: game.cpp  game.h
tests/: CMakeLists.txt  test_ai_player.cpp  test_board.cpp  test_fen_parser.cpp  test_move_validator.cpp
ui/: game_ui.cpp  game_ui.h
utility/: chess_api.cpp  chess_api.h  fen_parser.cpp  fen_parser.h  timer.cpp
